crates/auto-lang/test/cookbook/errors/002_anyhow/anyhow.at
// Error handling with context demo
fn read_config(path str) !str {
    if path == "" {
        return Err("empty path")
    }
    Ok("config data here")
}

fn main() ! {
    let config = read_config("config.toml").?
    print(f"Config: ${config}")
}
